k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questionnaire-task1-frontend
  labels:
    app: questionnaire-task1-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-task1-frontend
  template:
    metadata:
      labels:
        app: questionnaire-task1-frontend
    spec:
      containers:
      - name: frontend
        image: ronaldosssantos1/questionnaire-task1-frontend:latest
        ports:
        - containerPort: 80
